--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@types/react-dom": "18.2.15",
     "aws-sdk": "2.1524.0",
     "axios": "1.6.1",
-    "http-proxy-middleware": "2.0.6",
     "jwt-decode": "4.0.0",
     "react": "^18.2.0",
     "react-daum-postcode": "3.1.3",
@@ -37,6 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://43.200.178.27/",
   
   "eslintConfig": {
     "extends": [
