--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "1.6.1",
     "jwt-decode": "4.0.0",
     "react": "^18.2.0",
+    "react-cookie": "7.0.1",
     "react-daum-postcode": "3.1.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.48.2",
@@ -37,7 +38,6 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://43.200.178.27/",
-  
   "eslintConfig": {
     "extends": [
       "react-app",
